# anna

./: .gitignore  1.anna.js  2.anna.js  Cargo.toml  LICENSE_MIT  README.md  anna.js  anna.wasm  book.toml  bootstrap.js  index.html  package-lock.json  sw.js  webpack.config.js
.github/workflows/: deploy.yml  deploy_app_to_gh_pages.yml
anna_app/: Cargo.toml
anna_app/js/: ipfs.js  paypal.js  scanner.js
anna_app/src/: api.rs  app.rs  lib.rs  router.rs
anna_app/src/components/: create_product_form.rs  layout.rs  mod.rs  my_product_card.rs  nav.rs  order_form.rs  payment_form.rs  product_card.rs  shopping_cart_item.rs  web_rtc_manager.rs
anna_app/src/components/auth/: controls.scss  login.rs  login.scss  signup.scss
anna_app/src/design_system/: mod.rs
anna_app/src/design_system/atoms/: mod.rs
anna_app/src/design_system/atoms/logo/: logo.rs  style.scss
anna_app/src/design_system/atoms/menu/: menu.rs
anna_app/src/design_system/atoms/page/: page.rs
anna_app/src/design_system/header/: header.rs
anna_app/src/pages/: mod.rs  my_products.rs  products.rs  scanner.rs  shopping_cart.rs
anna_app/src/types/: mod.rs  product.rs
anna_app/static/: index.html  theme.scss
anna_chat/: Cargo.toml
anna_chat/src/: chat.rs  chat.scss  lib.rs  web_rtc_manager.rs
anna_design_system/: Cargo.toml
anna_design_system/src/: lib.rs
anna_design_system/src/atoms/: mod.rs
anna_design_system/src/atoms/button/: button.rs  button.scss
anna_design_system/src/atoms/container/: container.rs  container.scss  mod.rs
anna_design_system/src/atoms/h1/: h1.rs  h1.scss  mod.rs
anna_design_system/src/atoms/header/: header.rs  header.scss  mod.rs
anna_design_system/src/atoms/icon/: icon.rs  icon.scss  mod.rs
anna_design_system/src/atoms/logo/: logo.rs  mod.rs  style.scss
anna_design_system/src/atoms/menu/: menu.rs  menu.scss  mod.rs  style.scss
anna_design_system/src/atoms/menu_item/: menu_item.rs  menu_item.scss  mod.rs  style.scss
anna_design_system/src/atoms/page/: mod.rs  page.rs  page.scss  style.scss
anna_design_system/src/atoms/section/: mod.rs  section.rs  section.scss
anna_design_system/src/atoms/theme/: mod.rs  theme.rs  theme.scss
anna_design_system/src/atoms/tooltip/: mod.rs  tooltip.rs  tooltip.scss
anna_design_system/src/button/: button.rs
anna_design_system/src/footer/: footer.rs
anna_home/: Cargo.toml
anna_home/src/: lib.rs
anna_home/src/js/: paypal.js
anna_marketplace/: Cargo.toml
anna_marketplace/src/: lib.rs
anna_profile/: Cargo.toml
anna_profile/src/: context.rs  job.rs  lib.rs
anna_profile/src/components/: connect_pod.rs  mod.rs  search_did.rs
anna_profile/src/views/: profile.rs
anna_scanner/: Cargo.toml
anna_scanner/src/: lib.rs
anna_shop/: Cargo.toml
anna_shop/src/: lib.rs
anna_shop/src/components/: create_product_form.rs  mod.rs  product_card.rs  settings.rs
anna_shop/src/js/: ipfs.js
anna_shop/src/models/: product.rs
anna_shop/src/views/: shop.rs
anna_shopping_cart/: Cargo.toml
anna_shopping_cart/src/: lib.rs
anna_wallet/: Cargo.toml
anna_wallet/src/: lib.rs
docs/: Glossary.md  SUMMARY.md  book.toml
docs/auth/: app_to_server.drawio  auth.md
docs/meeting-notes/: 2020-09-24.md  2020-10-08.md  2020-10-15.md  README.md  _template.md
js/: ipfs_server.js  wasm_bridge.js
src/: api.rs  app.rs  button.rs  lib.rs  router.rs  types.rs
src/agents/: auth.rs
src/components/: atc_button.rs  layout.rs  mod.rs  nav.rs  navbar.rs  order_form.rs  payment_form.rs  product_card.rs  shopping_cart_item.rs
src/components/auth/: controls.rs  controls.scss  login.rs  mod.rs  signup.rs
src/components/layout/: header.rs  header.scss
src/design_system/: mod.rs
src/design_system/button/: button.rs  button.scss
src/design_system/footer/: footer.rs  mod.rs
src/design_system/header/: header.rs  mod.rs
src/js/: paypal.js
src/models/: auth.rs  mod.rs
src/pages/: chat.rs  home.rs  mod.rs  my_products.rs  product_detail.rs  products.rs  profile.rs  scanner.rs  shopping_cart.rs
src/types/: auth.rs  mod.rs
static/: chat.css  index.html  manifest.json  style.scss  theme.scss
static/products/: 1.json  11.json  products.json
