[package]
name = "anna"
version = "0.0.1"
authors = ["huhn <huhn@einfachiota.de"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "0.4"
serde = {version = "1.0.111", features = ["derive"]}
serde_json = "1.0.53"
wasm-bindgen = "0.2.63"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = { version = "^0.17", features = ["web_sys"] }
yew-router = { version="0.14.0", features = ["web_sys"] }
css-in-rust = { version = "0.4.1", features = ["yew_integration"] }
anyhow = "1.0.31"
uuid = {version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
      "console",
]

