[package]
name = "anna_home"
version = "0.0.1"
authors = ["huhn <huhn@einfachiota.de>"]
edition = "2018"


[dependencies]
yew = { version = "^0.17", features = ["web_sys"] }
css-in-rust = { version = "0.4.1", features = ["yew_integration"] }

wasm-bindgen = "0.2.63"

# internal dependencies
anna_design_system = { path = "../anna_design_system" }

# logs
log = "0.4"
web_logger = "0.2"