[package]
name = "anna_shop"
version = "0.0.1"
authors = ["huhn <huhn@einfachiota.de>"]
edition = "2018"


[dependencies]
yew = { version = "^0.17", features = ["web_sys"] }
css-in-rust = { version = "0.4.1", features = ["yew_integration"] }

anyhow = "1.0.31"

serde = "1.0.104"
serde_json = "1.0.53"

# logs
log = "0.4"
web_logger = "0.2"
