[package]
name = "anna_shop"
version = "0.0.1"
authors = ["huhn <huhn@einfachiota.de>"]
edition = "2018"


[dependencies]
yew = { version = "^0.17", features = ["web_sys"] }
css-in-rust = { version = "0.4.1", features = ["yew_integration"] }


serde = "1.0.104"
serde_json = "1.0.53"

# logs
log = "0.4"
web_logger = "0.2"

# iota
# iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "chrysalis" }
anyhow = "1.0.32"

wasm-bindgen = "^0.2"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen-futures = "0.4.18"
js-sys = "0.3.45"